refactor: 차, 포 메서드 분리